<resources>
    <string name="app_name">Jardin</string>
    <string name="action_settings">Opciones</string>
    <string name="temp">Temperatura</string>
    <string name="press">Presion</string>
    <string name="hum">Humedad</string>
    <string name="time">Hora</string>
    <string name="pause">Pausar</string>
    <string name="resume">Reanudar</string>
    <string name="water">Regar</string>
    <string name="cancel">Cancelar</string>
    <string name="tap">Grifo</string>
    <string name="taps">Grifos</string>
    <string name="modes">Modos</string>
    <string name="prediction">Predicción actual</string>
    <string name="zones">Zonas</string>
    <string name="save">Guardar</string>
    <string name="edit_zone">Editar Zona</string>
    <string name="new_zone">Nueva Zona</string>
    <string name="alarms">Alarmas</string>
    <string name="name">Nombre</string>
    <string name="hour">Hora</string>
    <string name="minute">Minutos</string>
    <string name="duration">Duracion</string>
    <string name="error">Error</string>
    <string name="ok">Aceptar</string>
    <string name="sensors">Sensores</string>
    <string name="server">Servidor (ip)</string>
    <string name="RSSI">RSSI</string>
    <string name="WiFi">WiFi</string>
    <string name="weather">accuweather.com</string>
    <string name="esp32">Esp32</string>
    <string name="resetdata">Reiniciar datos</string>
    <string name="resetdataSensor">Reiniciar Log sensores</string>
    <string name="reboot">Reiniciar sistema</string>

    <string name="error_name_empty">Por favor escriba un nombre</string>
    <string name="error_name_exist">Por favor escriba otro nombre, este ya existe</string>
    <string name="error_no_saved">Primero tiene que guardar el nombre de la zona</string>
    <string name="error_no_selected">Selecciona una alarma para seguir</string>

    <string name="title_activity_settings">Settings</string>


</resources>
