<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.EditAlarm">


    <TextView
        android:id="@+id/textView12"
        style="@style/AppTheme.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/alarms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/hour"
        app:layout_constraintEnd_toEndOf="@+id/hoursPicker"
        app:layout_constraintStart_toStartOf="@+id/hoursPicker"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <NumberPicker
        android:id="@+id/hoursPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />


    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/minute"
        app:layout_constraintEnd_toEndOf="@+id/minutesPicker"
        app:layout_constraintStart_toStartOf="@+id/minutesPicker"
        app:layout_constraintTop_toTopOf="@+id/tv" />

    <NumberPicker
        android:id="@+id/minutesPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/hoursPicker"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="@+id/durationPicker"
        app:layout_constraintStart_toStartOf="@+id/durationPicker"
        app:layout_constraintTop_toTopOf="@+id/tv" />

    <NumberPicker
        android:id="@+id/durationPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/minutesPicker"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />


    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tap"
        app:layout_constraintEnd_toEndOf="@+id/tapPicker"
        app:layout_constraintStart_toStartOf="@+id/tapPicker"
        app:layout_constraintTop_toTopOf="@+id/tv" />


    <NumberPicker
        android:id="@+id/tapPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/durationPicker"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <Button
        android:id="@+id/save"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/hoursPicker"
        app:layout_constraintTop_toBottomOf="@+id/hoursPicker" />

    <Button
        android:id="@+id/cancel"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tapPicker"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/hoursPicker" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>