<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditZoneActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/AppTheme.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_zone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btRemoveZone"
        style="@style/AppTheme.IconButton"
        android:background="@drawable/bin_background"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/textView6"
        style="@style/AppTheme.TextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/btSave"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageButton
        android:id="@+id/btSave"
        style="@style/AppTheme.IconButton"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/save_background"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/textView8"
        style="@style/AppTheme.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:text="@string/alarms"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <ImageButton
        android:id="@+id/btEditAlarm"
        style="@style/AppTheme.IconButton"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/settings_background"
        app:layout_constraintBottom_toTopOf="@+id/listAlarms"
        app:layout_constraintEnd_toStartOf="@+id/btAddAlarm"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/btAddAlarm"
        style="@style/AppTheme.IconButton"
        android:layout_marginEnd="8dp"
        android:background="@drawable/add_background"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/btRemoveAlarm"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/btRemoveAlarm"
        style="@style/AppTheme.IconButton"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bin_background"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <ListView
        android:id="@+id/listAlarms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@+id/btCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <Button
        android:id="@+id/btCancel"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>